--- a/gallery.html
+++ b/gallery.html
@@ -59,25 +59,25 @@
             <h1>Gallery</h1>
             <p>Me, You, Us.</p>
             <video width="100%" height="auto" controls autoplay loop muted>
-                <source src="video.mp4" type="video/mp4">
+                <source src="Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="gallery-grid">
                 <!-- Loop dari p1 hingga p25 -->
                 <img src="p1.JPG" alt="Photo 1">
-                <img src="p2.jpg" alt="Photo 2">
-                <img src="p3.jpg" alt="Photo 3">
-                <img src="p4.jpg" alt="Photo 4">
-                <img src="p5.jpg" alt="Photo 5">
-                <img src="p6.jpg" alt="Photo 6">
-                <img src="p7.jpg" alt="Photo 7">
-                <img src="p8.jpg" alt="Photo 8">
+                <img src="p2.JPG" alt="Photo 2">
+                <img src="p3.JPG" alt="Photo 3">
+                <img src="p4.JPG" alt="Photo 4">
+                <img src="p5.JPG" alt="Photo 5">
+                <img src="p6.JPG" alt="Photo 6">
+                <img src="p7.JPG" alt="Photo 7">
+                <img src="p8.JPG" alt="Photo 8">
                 <img src="p9.jpg" alt="Photo 9">
-                <img src="p10.jpg" alt="Photo 10">
-                <img src="p11.jpg" alt="Photo 11">
-                <img src="p12.jpg" alt="Photo 12">
-                <img src="p13.jpg" alt="Photo 13">
-                <img src="p14.jpg" alt="Photo 14">
+                <img src="p10.JPG" alt="Photo 10">
+                <img src="p11.JPG" alt="Photo 11">
+                <img src="p12.JPG" alt="Photo 12">
+                <img src="p13.JPG" alt="Photo 13">
+                <img src="p14.JPG" alt="Photo 14">
                 <img src="p15.jpg" alt="Photo 15">
                 <img src="p16.PNG" alt="Photo 16">
                 <img src="p17.jpg" alt="Photo 17">
